= svMisc News

== Changes in svMisc 1.0-0

* New, snake_case names of the functions. Old camelCase functions names are kept
  for compatibility, e.g., captureAll() -> capture_all().

* All documentation converted to Roxygen2 format.


== Changes in svMisc 0.9-73

* New is_rstudio(), and is_rstudio_server() functions. Also, file_edit() detects
  if RStudio is used and get an internal buffer to edit a file by default in
  that case.

* Vignette added.


== Changes in svMisc 0.9-72

* toRjson() adapted to be compatible with R >= 3.5.0 (thanks to Martin Maechler)


== Changes in svMisc 0.9-71

* Switch to Github for development; CI added.

* Code added to make svUnit tests compatibles with R Studio and devtools::test().


== Changes in svMisc 0.9-70

* Deprecated functions Args(), CallTip(), clipsource(), Complete(),
  CompletePlus(), getEnvironment(), Parse(), r(), Sys.tempdir(), Sys.userdir()
  are now defunct and eliminated from the package.

* Function pkg() is renamed package().

* Reworked code that was using :::.


== Changes in svMisc 0.9-69

* On Mac OS X >= 10.7, the package could not load because of a warning
  (converted into an error) in .onLoad(). Solved. (thanks Travis Porco for bug
  report).

* isHelp() now uses find.package() instead of the deprecated .find.package().


== Changes in svMisc 0.9-68

* The temporary environment that TempEnv() attaches to the search path is now
  called 'SciViews:TempEnv' instead of simply 'TempEnv' to avoid potential
  conflicts with other packages in CRAN.


== Changes in svMisc 0.9-67

* Added the fileEdit() function.

* Reworked argsTip() function to eliminate old code (for R < 2.10).

* parseText() reported an error instead of NA in the case last string is
  incomplete in R 2.15.


== Changes in svMisc 0.9-66

* Added function isJGR().

* Added batch processing function batch().


== Changes in svMisc 0.9-65

* Partial argument matching in completion(), progress() and rmTemp() code fixed.
