@@ -57,6 +57,7 @@ export(gui_save)
 export(gui_setwd)
 export(gui_source)
 export(helpSearchWeb)
+export(install)
 export(isAqua)
 export(isHelp)
 export(isJGR)
